@@ -18,7 +18,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)diacrit.c	1.4 (gritter) 10/29/05
+ * Sccsid @(#)diacrit.c	1.5 (gritter) 10/19/06
  */
 
 # include "e.h"
@@ -28,35 +28,35 @@ void
 diacrit(int p1, int type) {
 	int c, t;
 #ifndef NEQN
-	int effps;
+	float effps;
 #endif /* NEQN */
 
 	c = oalloc();
 	t = oalloc();
 #ifdef NEQN
 	nrwid(p1, ps, p1);
-	printf(".nr 10 %du\n", max(eht[p1]-ebase[p1]-VERT(2),0));
+	printf(".nr 10 %gu\n", max(eht[p1]-ebase[p1]-VERT(2),0));
 #else /* NEQN */
 	effps = EFFPS(ps);
 	nrwid(p1, effps, p1);
 	printf(".nr 10 %gp\n", VERT(max(eht[p1]-ebase[p1]-EM(1,ps),0)));	/* vertical shift if high */
-	printf(".if \\n(ct>1 .nr 10 \\n(10+\\s%d.25m\\s0\n", effps);
-	printf(".nr %d \\s%d.1m\\s0\n", t, effps);	/* horiz shift if high */
-	printf(".if \\n(ct>1 .nr %d \\s%d.15m\\s0\n", t, effps);
+	printf(".if \\n(ct>1 .nr 10 \\n(10+\\s%s.25m\\s0\n", tsize(effps));
+	printf(".nr %d \\s%s.1m\\s0\n", t, tsize(effps));	/* horiz shift if high */
+	printf(".if \\n(ct>1 .nr %d \\s%s.15m\\s0\n", t, tsize(effps));
 #endif /* NEQN */
 	switch(type) {
 		case VEC:	/* vec */
 #ifndef NEQN
-			printf(".ds %d \\v'-.4m'\\s%d\\(->\\s0\\v'.4m'\n",
-			    c, (int)max(effps-3, 6));
+			printf(".ds %d \\v'-.4m'\\s%s\\(->\\s0\\v'.4m'\n",
+			    c, tsize(max(effps-3, 6)));
 			break;
 #endif /* NEQN */
 		case DYAD:	/* dyad */
 #ifdef NEQN
 			printf(".ds %d \\v'-12p'_\\v'12p'\n", c);
 #else /* !NEQN */
-			printf(".ds %d \\v'-.4m'\\s%d\\z\\(<-\\(->\\s0\\v'.4m'\n",
-			    c, (int)max(effps-3, 6));
+			printf(".ds %d \\v'-.4m'\\s%s\\z\\(<-\\(->\\s0\\v'.4m'\n",
+			    c, tsize(max(effps-3, 6)));
 #endif /* !NEQN */
 			break;
 		case HAT:
@@ -67,22 +67,22 @@ diacrit(int p1, int type) {
 			break;
 		case DOT:
 #ifndef NEQN
-			printf(".ds %d \\s%d\\v'-.67m'.\\v'.67m'\\s0\n", c, effps);
+			printf(".ds %d \\s%s\\v'-.67m'.\\v'.67m'\\s0\n", c, tsize(effps));
 #else /* NEQN */
 			printf(".ds %d \\v'-12p'.\\v'12p'\n", c);
 #endif /* NEQN */
 			break;
 		case DOTDOT:
 #ifndef NEQN
-			printf(".ds %d \\s%d\\v'-.67m'..\\v'.67m\\s0'\n", c, effps);
+			printf(".ds %d \\s%s\\v'-.67m'..\\v'.67m\\s0'\n", c, tsize(effps));
 #else /* NEQN */
 			printf(".ds %d \\v'-12p'..\\v'12p'\n", c);
 #endif /* NEQN */
 			break;
 		case BAR:
 #ifndef NEQN
-			printf(".ds %d \\s%d\\v'.28m'\\h'.05m'\\l'\\n(%du-.1m\\(rn'\\h'.05m'\\v'-.28m'\\s0\n",
-				c, effps, p1);
+			printf(".ds %d \\s%s\\v'.28m'\\h'.05m'\\l'\\n(%du-.1m\\(rn'\\h'.05m'\\v'-.28m'\\s0\n",
+				c, tsize(effps), p1);
 #else /* NEQN */
 			printf(".ds %d \\v'-12p'\\l'\\n(%du'\\v'12p'\n", 
 				c, p1);
