@@ -18,14 +18,14 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)fromto.c	1.4 (gritter) 10/29/05
+ * Sccsid @(#)fromto.c	1.5 (gritter) 10/19/06
  */
 
 # include "e.h"
 
 void
 fromto(int p1, int p2, int p3) {
-	int pss;
+	float pss;
 #ifndef	NEQN
 	float b, h1, b1;
 #else	/* NEQN */
@@ -54,13 +54,13 @@ fromto(int p1, int p2, int p3) {
 	printf(".ds %d ", yyval);	/* bottom of middle box */
 	if( p2>0 ) {
 #ifndef	NEQN
-		printf("\\v'%gp'\\h'\\n(%du-\\n(%du/2u'\\s%d\\*(%d\\s%d", 
-			eht[p2]-ebase[p2]+b1, yyval, p2, pss, p2, EFFPS(ps));
+		printf("\\v'%gp'\\h'\\n(%du-\\n(%du/2u'\\s%s\\*(%d\\s%s", 
+			eht[p2]-ebase[p2]+b1, yyval, p2, tsize(pss), p2, tsize(EFFPS(ps)));
 		printf("\\h'-\\n(%du-\\n(%du/2u'\\v'%gp'\\\n", 
 			yyval, p2, -(eht[p2]-ebase[p2]+b1));
 #else	/* NEQN */
-		printf("\\v'%du'\\h'\\n(%du-\\n(%du/2u'\\s%d\\*(%d\\s%d", 
-			eht[p2]-ebase[p2]+b1, yyval, p2, pss, p2, EFFPS(ps));
+		printf("\\v'%du'\\h'\\n(%du-\\n(%du/2u'\\s%s\\*(%d\\s%s", 
+			eht[p2]-ebase[p2]+b1, yyval, p2, tsize(pss), p2, tsize(EFFPS(ps)));
 		printf("\\h'-\\n(%du-\\n(%du/2u'\\v'%du'\\\n", 
 			yyval, p2, -(eht[p2]-ebase[p2]+b1));
 #endif	/* NEQN */
@@ -74,11 +74,11 @@ fromto(int p1, int p2, int p3) {
 #endif /* NEQN */
 	if( p3>0 ) {
 #ifndef	NEQN
-		printf("\\v'%gp'\\h'-\\n(%du-\\n(%du/2u'\\s%d\\*(%d\\s%d\\h'\\n(%du-\\n(%du/2u'\\v'%gp'\\\n", 
-			-(h1-b1+ebase[p3]), yyval, p3, pss, p3, EFFPS(ps), yyval, p3, (h1-b1+ebase[p3]));
+		printf("\\v'%gp'\\h'-\\n(%du-\\n(%du/2u'\\s%s\\*(%d\\s%s\\h'\\n(%du-\\n(%du/2u'\\v'%gp'\\\n", 
+			-(h1-b1+ebase[p3]), yyval, p3, tsize(pss), p3, tsize(EFFPS(ps)), yyval, p3, (h1-b1+ebase[p3]));
 #else	/* NEQN */
-		printf("\\v'%du'\\h'-\\n(%du-\\n(%du/2u'\\s%d\\*(%d\\s%d\\h'\\n(%du-\\n(%du/2u'\\v'%du'\\\n", 
-			-(h1-b1+ebase[p3]), yyval, p3, pss, p3, EFFPS(ps), yyval, p3, (h1-b1+ebase[p3]));
+		printf("\\v'%du'\\h'-\\n(%du-\\n(%du/2u'\\s%s\\*(%d\\s%s\\h'\\n(%du-\\n(%du/2u'\\v'%du'\\\n", 
+			-(h1-b1+ebase[p3]), yyval, p3, tsize(pss), p3, tsize(EFFPS(ps)), yyval, p3, (h1-b1+ebase[p3]));
 #endif	/* NEQN */
 	}
 	printf("\n");
