@@ -18,7 +18,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)shift.c	1.4 (gritter) 10/29/05
+ * Sccsid @(#)shift.c	1.5 (gritter) 10/19/06
  */
 
 # include "e.h"
@@ -28,7 +28,7 @@ void
 bshiftb(int p1, int dir, int p2) {
 #ifndef NEQN
 	float shval, d1, h1, b1, h2, b2;
-	int diffps, effps, effps2;
+	float diffps, effps, effps2;
 	char *sh1, *sh2;
 #else	/* NEQN */
 	int shval, d1, h1, b1, h2, b2;
@@ -92,8 +92,8 @@ bshiftb(int p1, int dir, int p2) {
 #ifndef NEQN
 	if(dbg)printf(".\tb:b shift b: S%d <- S%d vert %g S%d vert %g; b=%g, h=%g\n", 
 		yyval, p1, shval, p2, -shval, ebase[yyval], eht[yyval]);
-	printf(".as %d \\v'%gp'\\s-%d%s\\*(%d\\s+%d%s\\v'%gp'\n", 
-		yyval, shval, diffps, sh1, p2, diffps, sh2, -shval);
+	printf(".as %d \\v'%gp'\\s-%s%s\\*(%d\\s+%s%s\\v'%gp'\n", 
+		yyval, shval, tsize(diffps), sh1, p2, tsize(diffps), sh2, -shval);
 	ps += deltaps;
 	if (rfont[p2] == ITAL)
 		rfont[p1] = 0;
@@ -112,7 +112,7 @@ void
 shift(int p1) {
 	ps -= deltaps;
 	yyval = p1;
-	if(dbg)printf(".\tshift: %d;ps=%d\n", yyval, ps);
+	if(dbg)printf(".\tshift: %d;ps=%g\n", yyval, ps);
 }
 
 void
@@ -179,10 +179,10 @@ shift2(int p1, int p2, int p3) {
 	printf(".nr %d \\n(%d\n", treg, p3);
 	printf(".if \\n(%d>\\n(%d .nr %d \\n(%d\n", p2, treg, treg, p2);
 #ifndef NEQN
-	printf(".as %d \\v'%gp'\\s%d\\*(%d\\h'-\\n(%du'\\v'%gp'\\\n", 
-		p1, subsh, effps, p2, p2, -subsh+supsh);
-	printf("\\s%d\\*(%d\\h'-\\n(%du+\\n(%du'\\s%d\\v'%gp'\n", 
-		effps, p3, p3, treg, effps2, -supsh);
+	printf(".as %d \\v'%gp'\\s%s\\*(%d\\h'-\\n(%du'\\v'%gp'\\\n", 
+		p1, subsh, tsize(effps), p2, p2, -subsh+supsh);
+	printf("\\s%s\\*(%d\\h'-\\n(%du+\\n(%du'\\s%s\\v'%gp'\n", 
+		tsize(effps), p3, p3, treg, tsize(effps2), -supsh);
 #else /* NEQN */
 	printf(".as %d \\v'%du'\\*(%d\\h'-\\n(%du'\\v'%du'\\\n", 
 		p1, subsh, p2, p2, -subsh+supsh);
