@@ -8,6 +8,7 @@ Release ...
 * dpost: Now handles DSC font comments in included PostScript files and
   supplies glyph data for them if specified with a troff ".fp" request.
 * dpost: Fixed to compile on NetBSD again (Bugreport by Dirk-Wilhelm Peters).
+* eqn: Handles fractional point sizes with "size" and "gsize" now.
 
 Release 061010
 * A simplistic XSLT stylesheet to convert OpenDocument text to troff input
